major refactor - remove login and use a token created at the time of booking for finding users
