# ticket_management_system/models.py
@@ -19,14 +19,13 @@ class Roles(enum.Enum):
 
 # pylint: disable=too-few-public-methods
 class User(db.Model):
-    """User model for authentication and authorization."""
+    """User model for identity and authorization."""
     __tablename__ = 'users'
 
     id = db.Column(db.UUID, primary_key=True, default=uuid.uuid4)
     firstname = db.Column(db.String(60), nullable=False)
     lastname = db.Column(db.String(60), nullable=False)
     email = db.Column(db.String(255), nullable=False, unique=True)
-    password_hash = db.Column(db.String(255), nullable=False)
     role = db.Column(Enum(Roles), nullable=False, default=Roles.user)
     created_at = db.Column(db.DateTime, nullable=False, default=_utcnow)
     updated_at = db.Column(db.DateTime, nullable=False, default=_utcnow, onupdate=_utcnow)
@@ -102,7 +101,8 @@ class Ticket(db.Model):
 
     id = db.Column(db.UUID, primary_key=True, default=uuid.uuid4)
     booking_id = db.Column(db.UUID, db.ForeignKey("bookings.id", ondelete="CASCADE"))
-    passenger_name = db.Column(db.String(50), nullable=False)
+    passenger_fname = db.Column(db.String(50), nullable=False)
+    passenger_lname = db.Column(db.String(50), nullable=False)
     passenger_passport_num = db.Column(db.String(12), nullable=False)
     seat_num = db.Column(db.String(4), nullable=False)
     flight_id = db.Column(db.UUID, db.ForeignKey("flights.id", ondelete="CASCADE"))
